css/style.css
/* ... */
#about-container {
  padding: 0;
  margin: auto;
  width: 86%;
  grid-template-columns: none;
  font-size: 16px;
  line-height: 1.65em;
}

#about-container ul {
  margin: 0;
  padding-left: 0;
}

#about-container li {
  list-style: none;
}

#about-container h4 {
  margin-top: 0.5em;
  display: inline-block;
  font-weight: 600;
  font-size: 14.5px;
  color: #555;
  border-left: 3px solid #555;
  padding-left: 10px;
  padding-right: 10px;
}

#about-container a {
  padding-bottom: 0.05em;
}

.about-column {
  padding: 0.5em 0;
}

#about-container .experience {
  padding: 0.5em 0;
}

#about-container .role,
#about-container .award, 
#about-container .paper {
  padding: 0.2em 0;
  font-size: 17.5px;
  color: #111;
  font-weight: 500;
}

#about-container .button {
  display: inline-block;
  border: 1px solid #999;
  background: #f6f6f6;
  padding: 0 4px;
  color: #999;
  font-size: 13px;
  border-radius: 5px;
  margin-right: 3px;
}

#about-container .button:hover {
  border: 1px solid #333;
  box-shadow: 0 0px 5px 0 rgba(0, 0, 0, 0.15);
}

.resume-cfa {
  display: inline-block;
  border: 1px solid #f80;
  padding: 2px 10px !important;
  color: #f80;
  font-size: 15px;
  border-radius: 5px;
  margin-right: 3px;
}

.resume-cfa:hover {
  background: rgba(255, 136, 0, 0.05);
  border: 1px solid #f80 !important;
  color: #f80 !important;
  box-shadow: 0 0px 5px 0 rgba(255, 136, 0, 0.15);
  text-decoration: none;
}

#about-container .major {
  color: #777;
  font-size: 17px;
  font-weight: 400;
}

#about-container .affiliation {
  font-size: 16px;
  padding: 0.2em 0;
} 

#about-container .location {
  padding: 0.2em 0;
  color: #aaa;
  font-size: 15px;
}

#about-container .author b{
  font-weight: 400;
  color: #777;
}

#about-container .duration, 
#about-container .author {
  padding: 0.05em 0 0.5em;
  color: #bfbfbf;
  font-size: 14.5px;
  line-height: 1.6em;
}

#about-container .award-title, 
#about-container .pub-date{
  display: inline;
  font-size: 16px;
  font-weight: 400;
}

footer {
  width: 86%;
  margin: auto;
  padding: 2em 0 1em 0;
} 

footer .contact {
  margin: 0.3em; 
  text-align: center;
  font-size: 18.5px;
}

footer .contact a {
  color: #333;
  display: inline-block;
  padding: 0.5em;
}

footer .contact a:hover {
  color: #f80;
  transition: color .2s ease-out;
}

footer #signature {
  margin-top: 1.8em;
  text-align: center;
  font-size: 16px;
  line-height: 1.6em;
}

#signature a {
  color: #333;
}

/*modal*/

/* The Modal */
.modal-mask {
  width: 100%; /* Full width */
  height: 100%; /* Full height */
  display: none; /* Hidden by default */
  position: fixed;
  z-index: 5;
  left: 0;
  top: 0;
  overflow: auto;
  background-color: rgba(0,0,0,0.3); /* Black w/ opacity */
}

/* Modal Content/Box */
.modal-popup {
  position: fixed;
  left: 7%;
  top: 30vh;
  width: 75%;
  z-index: 10;
  background-color: #fefefe;
  display: none;
  padding: 10px 5.5%;
  border-radius: .38em;
}

/* The Close Button */
.close {
  color: #333;
  position: absolute;
  right: 20px;
  top: 15px;
  font-size: 36px;
  font-weight: 500;
}

.close:hover,
.close:focus {
  color: black;
  text-decoration: none;
  cursor: pointer;
}

.modal-header {
  font-size: 19.5px;
  width: 90%;
  line-height: 1.5em;
  font-weight: 500;
}

.modal-role {
  font-size: 16px;
  color: #aaa;
}

.modal-body {
  font-size: 16px;
}

.modal-image {
  text-align: center;
  width: 200px;
  height: auto;
}

/*  --- */


@media (max-width: 30em) and (min-width: 15em) {
  header h1 {
/*    font-size: 32px;*/
    font-size: calc(18px + 1vw);
  }
  
  header {
    padding-top: 25%;
  }
}
/* ... */

